# splerg-p2p

./: .gitignore  .solitarc.js  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json
app/: package.json  pnpm-lock.yaml  vite.config.ts
app/src/: App.tsx  index.css
app/src/components/: action-buttons.tsx  connection-info.tsx  dashboard.tsx  inbox.tsx  modal.tsx  navbar.tsx  spl-p2p.tsx  swap-form.tsx  swap-modal.tsx  token-list.tsx  token-pair.tsx  trades.tsx
app/src/components/token/: token-input.tsx  token-list.tsx  token-pair.tsx
app/src/components/ui/: buttons.tsx  icon.tsx  icons.tsx  table.tsx  tables.tsx
app/src/context/: modal-context.tsx  program-context.tsx
app/src/hooks/: useOrderMutations.tsx
app/src/model/: index.ts  token.ts
app/src/routes/: index.tsx
app/src/utils/: index.ts  solana.ts
app/src/views/: modify.tsx  swap.tsx  trades.tsx  user.tsx
programs/splerg-p2p/: Cargo.toml
programs/splerg-p2p/src/: error.rs  instruction.rs  lib.rs  state.rs  utils.rs  validation.rs
programs/splerg-p2p/src/math/: fee.rs
programs/splerg-p2p/src/processor/: mod.rs
programs/test-program/: Cargo.toml
programs/test-program/src/: lib.rs  mints.rs  utils.rs
programs/test-program/tests/: mints.rs  mod.rs  utils.rs
scripts/: local.sh
sdk/: .env  .gitignore  package.json  pnpm-lock.yaml
sdk/idl/: splerg_p2p.json
sdk/src/: client.ts  common.ts  index.ts  instruction.ts  utils.ts
src/: error.rs  instruction.rs  lib.rs  state.rs  validation.rs
src/processor/: mod.rs
