[package]
name = "spl-p2p"
version = "0.1.0"
edition = "2021"

[lib]
name = "spl_p2p"
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []

[dependencies]
borsh = "1.5.5"
solana-program = "2.1.9"
solana-security-txt = "1.1.1"
spl-token = "7.0.0"
spl-token-2022 = { version = "7.0.0", features = ["no-entrypoint"]}
thiserror = "2.0.11"
