[package]
name = "test-program"
version = "0.1.0"
edition = "2021"

[dependencies]
borsh = "1.5.5"
solana-program = "2.1.10"
solana-sdk = "2.1.10"
spl-associated-token-account = "6.0.0"
spl-token = "7.0.0"
spl-token-2022 = "7.0.0"
splerg-p2p = { path = "../splerg-p2p"}

[dev-dependencies]
litesvm = "0.5.0"
